@@ -1,3 +1,3 @@
-VERSION=4.05.00
-YEARS=2005-2016
+VERSION=4.06.00
+YEARS=2005-2017
 
