@@ -1,3 +1,11 @@
+bobcat (4.06.00)
+
+  * The support classes Mul, Div, Mod, ..., Xor, used by BinopsBase declared a
+    Binops parameter, which was nowhere used. This parameter has been removed
+    from BinopsBase's support classes.
+
+
+
 bobcat (4.05.00)
 
   * Added classes Exec, CinInserter, CerrExtractor, CoutExtractor, and
